...
                {t("profile.security_screen.two_factor.otp_subtitle")}
                {"\n"}
                <Text className="font-bold text-gray-700">{maskedEmail}</Text>
              </Text>

              {/* OTP Input Container */}
              <Pressable onPress={handleFocusInput} testID="otp-box-container" className="relative flex-row justify-center gap-2 mb-6">
                {Array.from({ length: OTP_LENGTH }).map((_, index) => {
                  const isActive = index === otp.length;
                  const isFilled = index < otp.length;
                  return (
                    <View
                      key={index}
...
              {/* Cancel & Sign Out */}
              <View className="w-full mt-8">
                <TouchableOpacity
                  onPress={handleCancel}
                  activeOpacity={0.7}
                  className="w-full"
                  testID="otp-cancel-button"
                >
                  <Text className="text-gray-400 text-sm underline text-center pb-1">
                    {t("profile.security_screen.two_factor.cancel_and_logout")}
                  </Text>
                </TouchableOpacity>
              </View>
...
