...
        <Text className="text-gray-500 text-base font-medium mt-1 text-left">
          {t("language_screen.subtitle")}
        </Text>
      </View>

      <ScrollView
        testID="profile-list"
        className="flex-1 "
        showsVerticalScrollIndicator={false}
      >
        <View className="px-4 pb-24">
          {/* Profiles List (Folders) */}
          {/* <Text className="text-2xl font-bold text-gray-900 tracking-tight mb-4">
...
